Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-5407

Crash SIGSEGV in DeepCopyVarlenData while inserting into sequencefile

    XMLWordPrintableJSON

Details

    Description

      The impalad LOG, minidump, and symbolized stack are attached.

      Here is the top of the stack:

      0 libc-2.12.so + 0x89ac0
      rax = 0x0000000000000000 rdx = 0xffffffff8b14bffa
      rcx = 0x01ffffffff15af77 rbx = 0x0000000012387d50
      rsi = 0x00007f9629fae9c0 rdi = 0x00007f97b6879f97
      rbp = 0x00007f97b6405b48 rsp = 0x00007f985fc2f5e8
      r8 = 0x0000000000000000 r9 = 0x0000000000000000
      r10 = 0x0000000000000000 r11 = 0x0000000000000000
      r12 = 0x0000000000000000 r13 = 0x0000000000000000
      r14 = 0x0000000000000000 r15 = 0x00007f97c0b70748
      rip = 0x0000003f26489ac0
      Found by: given as instruction pointer in context
      1 impalad!impala::Tuple::DeepCopyVarlenData(impala::TupleDescriptor const&, impala::MemPool$
      rsp = 0x00007f985fc2f5f0 rip = 0x0000000000a774ab
      Found by: stack scanning
      2 impalad!impala::Tuple::DeepCopy(impala::TupleDescriptor const&, impala::MemPool*) + 0xab
      rbx = 0x00007f97b6405b38 rbp = 0x00007f97cb2b1a08
      rsp = 0x00007f985fc2f640 r12 = 0x00007f94bc7f8480
      r13 = 0x00007f97b1ca69de r14 = 0x0000000000000000
      r15 = 0x00007f97c0b70748 rip = 0x0000000000a7769b
      Found by: call frame info
      3 impalad!impala::DataStreamSender::Channel::AddRow(impala::TupleRow*) + 0x81
      rbx = 0x0000000000000000 rbp = 0x00007f936c4be068
      rsp = 0x00007f985fc2f670 r12 = 0x00007f93b09f65c8
      r13 = 0x00007f973b0da400 r14 = 0x0000000000000000
      r15 = 0x00007f97c0b70748 rip = 0x0000000000df4ba1
      Found by: call frame info
      4 impalad!impala::DataStreamSender::Send(impala::RuntimeState*, impala::RowBatch*) + 0x34e
      rbx = 0x0000000000000081 rbp = 0x0000000013dbb4e0
      rsp = 0x00007f985fc2f6d0 r12 = 0x000000000000000d
      r13 = 0x00007f985fc2f790 r14 = 0x00007f97ed1ac880
      r15 = 0x00007f936c4be068 rip = 0x0000000000df585e
      Found by: call frame info
      5 impalad!impala::FragmentInstanceState::ExecInternal() + 0x22a
      rbx = 0x00007f97a3df4280 rbp = 0x00007f985fc2f7a0
      rsp = 0x00007f985fc2f750 r12 = 0x00007f976d97f840
      r13 = 0x00007f985fc2f790 r14 = 0x00007f985fc2f77e
      r15 = 0x00007f985fc2f7d0 rip = 0x0000000000a7a91a
      Found by: call frame info
      6 impalad!impala::FragmentInstanceState::Exec() + 0x2b9
      rbx = 0x00007f97a3df4280 rbp = 0x00007f985fc2f9d0
      rsp = 0x00007f985fc2f8d0 r12 = 0x00007f985fc2f8f0
      r13 = 0x00007f985fc2f900 r14 = 0x00007f985fc2f940
      r15 = 0x00007f985fc2f8e0 rip = 0x0000000000a7dd79
      Found by: call frame info
      7 impalad!impala::QueryState::ExecFInstance(impala::FragmentInstanceState*) + 0x1f6
      rbx = 0x00000000028a3870 rbp = 0x00007f9792796000
      rsp = 0x00007f985fc2f9b0 r12 = 0x00007f985fc2fa00
      r13 = 0x00007f97a3df4280 r14 = 0x00007f985fc2f9d0
      r15 = 0x00007f9ad48de7a0 rip = 0x0000000000a69bb6
      Found by: call frame info

      Attachments

        1. fecdc75a-9d9d-4cb0-1d81eea4-145ffb1d.dmp
          13.54 MB
          Joe McDonnell
        2. impalad.ve1140.halxg.cloudera.com.impala.log.INFO.20170531-104253.155628
          235 kB
          Joe McDonnell
        3. symbolized_stack.txt
          4.50 MB
          Joe McDonnell

        Issue Links

          Activity

            People

              attilaj Attila Jeges
              joemcdonnell Joe McDonnell
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: